added the newline charachter to the vocab

--- a/normalize.ipynb
+++ b/normalize.ipynb
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "' المآب رفيق من رفاق الصبا، رآه الناظم عليلا محمولا بعد غربة طويلة خاطبت عنك فما تركت مخاطبا وسألت حتى لم أدع مسؤولا صدأ الحوادث بدل الاشراق في فكري وكدر خاطري المصقولا يا من نزلت بنبعه أرد الهوى فأذاقنيه محطما وبيلا وتابع الأنواء في أفق الصبا لم يبق لي صحوا أراه جميلا ذهب الصبا الغالي وزالت دوحة مدت لنا ظل الوفاء ظليلا أيام يخذلني أمامك منطقي فإذا سكت فكل شيء قيلا ويثور بي حبي فإن لفظ جرى بفمي تعثر بالشفاه خجولا يا من نزلت بنبعه أرد الهوى فأذاقنيه محطما وبيلا وتابع الأنواء في أفق الصبا لم يبق لي صحوا أراه جميلا ذهب الصبا الغالي وزالت دوحة مدت لنا ظل الوفاء ظليلا أيام يخذلني أمامك منطقي فإذا سكت فكل شيء قيلا '"
+       "'\\nالمآب رفيق من رفاق الصبا، رآه الناظم عليلا محمولا بعد غربة طويلة \\n خاطبت عنك فما تركت مخاطبا وسألت حتى لم أدع مسؤولا\\n صدأ الحوادث بدل الاشراق في فكري وكدر خاطري المصقولا\\n يا من نزلت بنبعه أرد الهوى فأذاقنيه محطما وبيلا\\n وتابع الأنواء في أفق الصبا لم يبق لي صحوا أراه جميلا\\n ذهب الصبا الغالي وزالت دوحة مدت لنا ظل الوفاء ظليلا\\n أيام يخذلني أمامك منطقي فإذا سكت فكل شيء قيلا \\n ويثور بي حبي فإن لفظ جرى بفمي تعثر بالشفاه خجولا\\n يا من نزلت بنبعه أرد الهوى فأذاقنيه محطما وبيلا\\n وتابع الأنواء في أفق الصبا لم يبق لي صحوا أراه جميلا\\n ذهب الصبا الغالي وزالت دوحة مدت لنا ظل الوفاء ظليلا\\n أيام يخذلني أمامك منطقي فإذا سكت فكل شيء قيلا '"
       ]
      },
      "execution_count": 5,
@@ -90,8 +90,10 @@
     }
    ],
    "source": [
-    "harakat_re = r'(ٍ|َ|ُ|ِ|ّ|ْ|ً)'# remove harakat\n",
-    "nonarabic_nonspace_re = r'[^\\u0621-\\u064A .،]' # remove every non arabic charachter that isnt a space, comma or dot\n",
+    "# remove harakat\n",
+    "harakat_re = r'(ٍ|َ|ُ|ِ|ّ|ْ|ً)'\n",
+    "# remove every non arabic charachter that isnt a space, comma, dot or new line\n",
+    "nonarabic_nonspace_re = r'[^\\u0621-\\u064A .،\\n]'\n",
     "extension_re = r'ـ' # remove word extensions e.g. أهـــــــــلا\n",
     "\n",
     "def normalize_poem(poem):\n",
